@@ -91,8 +91,8 @@
 # generated client id. This leads to persistent clients that will never
 # reconnect. This option allows these clients to be removed.
 #
-# The expiration period should be an integer followed by one of d w m y for
-# day, week, month and year respectively. For example
+# The expiration period should be an integer followed by one of h d w m y for
+# hour, day, week, month and year respectively. For example
 #
 # persistent_client_expiration 2m
 # persistent_client_expiration 14d
